--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="style.css">
+
+<!-- Required JS library for image export -->
+<script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+
 </head>
 <body>
 
@@ -14,6 +18,7 @@
   <header>
     <div class="title">Ruchi Kirana Shop</div>
     <div class="subtitle">Simple Hungerbox-style billing (no GST)</div>
+
     <div class="tabs">
       <button id="customerTab" class="active">Customer</button>
       <button id="adminTab">Admin</button>
@@ -21,75 +26,102 @@
     </div>
   </header>
 
-  <!-- CUSTOMER VIEW -->
+  <!-- CUSTOMER SECTION -->
   <section id="customerSection">
     <div class="card">
       <h2>Customer Details</h2>
-      <input id="custName" class="input" placeholder="Enter customer name">
+
+      <!-- MANDATORY CUSTOMER NAME -->
+      <input id="custName" class="input" placeholder="Enter customer name" required>
+
       <div class="small" style="margin-top:4px;">Name will appear on the bill and in shared text.</div>
+
+      <div id="nameError" style="color:red;font-size:12px;display:none;">
+        Customer name is required.
+      </div>
     </div>
 
     <div class="card">
       <h2>Products</h2>
-      <div class="small">Tap + / − to add or remove items. Use category tabs like HungerBox.</div>
+      <div class="small">Tap + / − to add or remove items.</div>
+
       <div id="categoryTabs" class="catTabs"></div>
       <div id="productList"></div>
     </div>
   </section>
 
-  <!-- ADMIN VIEW -->
+  <!-- ADMIN SECTION -->
   <section id="adminSection" style="display:none;">
     <div class="card">
       <h2>Manage Products</h2>
-      <div class="small" style="margin-bottom:6px;">Active products appear in customer screen under their category.</div>
+
       <table id="adminTable" class="adminTable"></table>
 
       <h2 style="margin-top:10px;">Add Product</h2>
+
       <input id="pName" class="input" placeholder="Product name">
       <div style="height:6px;"></div>
-      <input id="pCategory" class="input" placeholder="Category (Snacks / Beverages / Staples)">
+
+      <input id="pCategory" class="input" placeholder="Category">
       <div style="height:6px;"></div>
+
       <input id="pPrice" class="input" placeholder="Price" type="number" min="0" step="0.01">
+
       <div style="margin-top:6px;font-size:12px;">
         <label><input type="checkbox" id="pActive" checked> Active</label>
       </div>
+
       <button class="btn primary" onclick="addProduct()">Add Product</button>
       <button class="btn dark" onclick="saveProducts()">Save Products</button>
     </div>
   </section>
 
-  <!-- HISTORY VIEW -->
+  <!-- HISTORY SECTION -->
   <section id="historySection" style="display:none;">
     <div class="card">
       <h2>Bill History</h2>
+
       <div id="historyList" class="small" style="margin-top:6px;">No bills saved.</div>
+
       <button class="btn dark" style="margin-top:14px;" onclick="clearHistory()">Clear All History</button>
     </div>
   </section>
 
 </div>
 
+<!-- HIDDEN BILL PREVIEW (Required for Image Generation) -->
+<div id="billPreview" style="display:none;"></div>
+
 <!-- BOTTOM CART DRAWER -->
 <div id="cartDrawer" class="drawer hidden">
   <div class="drawer-card">
+
     <div class="drawer-summary" onclick="toggleDrawer()">
       <div class="drawer-left">
         <div class="drawer-title">View Bill</div>
         <div id="drawerItems" class="drawer-sub">0 items selected</div>
       </div>
+
       <div style="display:flex;align-items:center;gap:8px;">
         <div id="drawerTotal" class="drawer-total">₹0</div>
         <div id="drawerToggleIcon" class="drawer-toggle">▲</div>
       </div>
     </div>
+
     <div id="drawerBody" class="drawer-body" style="display:none;">
+
       <div class="drawer-row">
         <span class="label">Billing Date</span>
         <span id="billingDate" class="value">—</span>
       </div>
+
       <div class="drawer-row">
         <span class="label">Customer</span>
-        <input id="custNameDrawer" placeholder="Enter customer name">
+        <input id="custNameDrawer" placeholder="Enter customer name" required>
+      </div>
+
+      <div id="nameErrorDrawer" style="color:red;font-size:12px;display:none;margin-top:-6px;margin-bottom:8px;">
+        Customer name is required.
       </div>
 
       <table id="billTable" class="billTable">
@@ -100,6 +132,7 @@
             <th class="amount">Total</th>
           </tr>
         </thead>
+
         <tbody id="billBody"></tbody>
       </table>
 
@@ -109,14 +142,17 @@
       </div>
 
       <div class="drawer-buttons">
-        <button class="btn primary" onclick="saveBill()">Save</button>
-        <button class="btn dark" onclick="shareBill()">Share</button>
+        <button class="btn primary" onclick="downloadImage()">Save Image</button>
+        <button class="btn dark" onclick="shareImage()">Share Image</button>
         <button class="btn" style="background:#9ca3af;color:white;" onclick="clearCart()">Clear Cart</button>
       </div>
+
     </div>
   </div>
 </div>
 
+<!-- MAIN SCRIPT -->
 <script src="script.js"></script>
+
 </body>
 </html>
