--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
       <!-- FINAL BUTTON ROW -->
       <div class="drawer-buttons">
         <button class="btn primary" onclick="downloadImage()">Save</button>
-        <button class="btn dark" onclick="shareBill()">Share</button>
-        <button class="btn whatsapp" onclick="shareToWhatsApp()">WhatsApp</button>
+        <button class="btn dark" onclick="shareImage()">Share</button>
+        <button class="btn whatsapp" onclick="shareToWhatsAppText()">WhatsApp</button>
         <button class="btn clear" onclick="clearCart()">Clear</button>
       </div>
 
@@ -144,3 +144,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
