--- a/index.html
+++ b/index.html
@@ -7,18 +7,17 @@
 
 <link rel="stylesheet" href="style.css">
 
-<!-- Required for image export -->
+<!-- Image export library -->
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
-</head>
 
+</head>
 <body>
 
 <div class="app">
 
   <header>
     <div class="title">Ruchi Kirana Shop</div>
-    <div class="subtitle">Hungerbox-style billing (No GST)</div>
-
+    <div class="subtitle">Best Prices. Everything You Need. Everyday.</div>
     <div class="tabs">
       <button id="customerTab" class="active">Customer</button>
       <button id="adminTab">Admin</button>
@@ -26,106 +25,101 @@
     </div>
   </header>
 
-  <!-- CUSTOMER SECTION -->
+  <!-- CUSTOMER VIEW -->
   <section id="customerSection">
     <div class="card">
       <h2>Customer Details</h2>
-      <input id="custName" class="input" placeholder="Enter customer name" required>
-      <div id="nameError" class="error">Customer name is required.</div>
+      <input id="custName" class="input" placeholder="Enter customer name">
+      <div class="small" style="margin-top:4px;">Name will appear on the bill and in shared text.</div>
     </div>
 
     <div class="card">
       <h2>Products</h2>
+      <div class="small">Tap + / − to add or remove items.</div>
       <div id="categoryTabs" class="catTabs"></div>
       <div id="productList"></div>
     </div>
   </section>
 
-  <!-- ADMIN SECTION -->
+  <!-- ADMIN VIEW -->
   <section id="adminSection" style="display:none;">
     <div class="card">
       <h2>Manage Products</h2>
       <table id="adminTable" class="adminTable"></table>
 
-      <h2>Add Product</h2>
+      <h2 style="margin-top:10px;">Add Product</h2>
       <input id="pName" class="input" placeholder="Product name">
+      <div style="height:6px;"></div>
       <input id="pCategory" class="input" placeholder="Category">
-      <input id="pPrice" class="input" placeholder="Price" type="number">
-
-      <label style="font-size:14px;margin-top:6px;">
-        <input type="checkbox" id="pActive" checked> Active
-      </label>
-
-      <button class="btn primary" onclick="addProduct()">Add</button>
+      <div style="height:6px;"></div>
+      <input id="pPrice" class="input" placeholder="Price" type="number" min="0" step="0.01">
+      <div style="margin-top:6px;font-size:12px;">
+        <label><input type="checkbox" id="pActive" checked> Active</label>
+      </div>
+      <button class="btn primary" onclick="addProduct()">Add Product</button>
       <button class="btn dark" onclick="saveProducts()">Save Products</button>
     </div>
   </section>
 
-  <!-- HISTORY SECTION -->
+  <!-- HISTORY VIEW -->
   <section id="historySection" style="display:none;">
     <div class="card">
       <h2>Bill History</h2>
-      <div id="historyList">No bills saved.</div>
-      <button class="btn dark" onclick="clearHistory()" style="margin-top:10px;">Clear All</button>
+      <div id="historyList" class="small" style="margin-top:6px;">No bills saved.</div>
+      <button class="btn dark" style="margin-top:14px;" onclick="clearHistory()">Clear All History</button>
     </div>
   </section>
 
 </div>
 
-<!-- Hidden for Image Capture -->
+<!-- Hidden Bill Preview for Image Export -->
 <div id="billPreview" style="display:none;"></div>
 
-<!-- DRAWER -->
+<!-- BOTTOM CART -->
 <div id="cartDrawer" class="drawer hidden">
   <div class="drawer-card">
-
     <div class="drawer-summary" onclick="toggleDrawer()">
-      <div>
+      <div class="drawer-left">
         <div class="drawer-title">View Bill</div>
-        <div id="drawerItems" class="drawer-sub">0 items</div>
+        <div id="drawerItems" class="drawer-sub">0 items selected</div>
       </div>
-
-      <div class="drawer-right">
-        <span id="drawerTotal">₹0</span>
-        <span id="drawerToggleIcon">▲</span>
+      <div style="display:flex;align-items:center;gap:8px;">
+        <div id="drawerTotal" class="drawer-total">₹0</div>
+        <div id="drawerToggleIcon" class="drawer-toggle">▲</div>
       </div>
     </div>
 
-    <div id="drawerBody" class="drawer-body">
-
+    <div id="drawerBody" class="drawer-body" style="display:none;">
       <div class="drawer-row">
-        <span>Billing Date</span>
-        <span id="billingDate">—</span>
+        <span class="label">Billing Date</span>
+        <span id="billingDate" class="value">—</span>
+      </div>
+      <div class="drawer-row">
+        <span class="label">Customer</span>
+        <input id="custNameDrawer" placeholder="Enter customer name">
       </div>
 
-      <div class="drawer-row">
-        <span>Customer</span>
-        <input id="custNameDrawer">
-      </div>
-      <div id="nameErrorDrawer" class="error">Customer name is required.</div>
-
-      <table class="billTable">
+      <table id="billTable" class="billTable">
         <thead>
           <tr>
             <th>Item</th>
             <th style="width:40px;">Qty</th>
-            <th>Total</th>
+            <th class="amount">Total</th>
           </tr>
         </thead>
         <tbody id="billBody"></tbody>
       </table>
 
-      <div class="drawer-row total">
+      <div class="drawer-row total-row">
         <span>Total</span>
         <span id="grandTotalText">₹0</span>
       </div>
 
       <div class="drawer-buttons">
-        <button class="btn primary" onclick="downloadImage()">Save</button>
-        <button class="btn whatsapp" onclick="shareToWhatsAppText()">WhatsApp</button>
-        <button class="btn clear" onclick="clearCart()">Clear</button>
+        <button class="btn primary" onclick="downloadImage()">Save Image</button>
+        <button class="btn dark" onclick="shareImage()">Share Image</button>
+        <button class="btn" style="background:#9ca3af;color:white;" onclick="clearCart()">Clear Cart</button>
       </div>
-
     </div>
   </div>
 </div>
@@ -133,4 +127,3 @@
 <script src="script.js"></script>
 </body>
 </html>
-
