--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +10,7 @@
 
 <!-- Image export library -->
 <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+  <div id="billPreview"></div>
 
 </head>
 <body>
@@ -127,3 +129,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
